<resources>
    <string name="app_name">MockLine</string>
    <string name="name_inp_text">ユーザ名</string>
    <string name="mailaddress_inp_text">メールアドレス</string>
    <string name="password_inp_1_text">パスワード</string>
    <string name="password_inp_2_text">パスワード(再入力)</string>
    <string name="login_button_text">ログイン</string>
    <string name="register_button_text">新規登録</string>
    <string name="logout_text">ログアウト</string>
    <string name="talkroom_add_text">トークルーム作成</string>
    <string name="talkroom_name_inp_text">トークルーム名</string>
    <string name="talkroom_select_friends_inp_text">友達選択</string>
    <string name="make_talkroom_button_text">トークルーム作成</string>
    <string name="notify_channel_id">new_talk_notify</string>
    <string name="notify_channel_name">新規トーク通知</string>
    <string name="exit_talkroom_text">トークルーム退出</string>
    <string name="invite_talkroom_text">ユーザ招待</string>
    <string name="add_friends_text">友達追加</string>
    <string name="add_friend_from_id">IDを使用する</string>
    <string name="add_friend_from_qr">QRコードを使用する</string>
    <string name="start_qr_reader_text">QRコードリーダー起動</string>
    <string name="my_qr">自分のQRコード (有効期間: QRコード生成から10分)</string>
</resources>
